[package]
name = "pl_ifelse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pl_ifelse"
crate-type = ["cdylib"]

[dependencies]
polars = {version="0.46.0", features=["lazy",  "strings",
  "temporal",]}
polars-arrow = "0.46.0"
polars-python = { version="0.46.0", features = ["pymethods", "iejoin"] }
polars-utils = "0.46.0"
pyo3 = {version="0.23.5", features=["extension-module", "abi3-py39", "chrono", "chrono-tz", "multiple-pymethods"]}
pyo3-polars = {version="0.20.0", features=["derive"]}
serde = "1.0.218"
serde_bytes = "0.11.16"
serde_json = "1.0.140"
